--- a/lession4/pom.xml
+++ b/lession4/pom.xml
@@ -179,49 +179,6 @@
             <version>1.8.9</version>
         </dependency>
 
-        <!--asm是小巧轻便的Java字节码操作框架，它能方便的生成和改造Java代码，Hibernate和Spring底层都使用asm-->
-        <dependency>
-            <groupId>asm</groupId>
-            <artifactId>asm</artifactId>
-            <version>3.3.1</version>
-        </dependency>
-
-        <!--AOP联盟的API包，其中包含了针对面向切面的接口，通常Spring等其它具备动态织入功能的框架依赖此包-->
-        <dependency>
-            <groupId>aopalliance</groupId>
-            <artifactId>aopalliance</artifactId>
-            <version>1.0</version>
-        </dependency>
-
-        <!--文件上传相关-->
-        <dependency>
-            <groupId>commons-fileupload</groupId>
-            <artifactId>commons-fileupload</artifactId>
-            <version>1.3.3</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.5</version>
-        </dependency>
-
-        <!--json相关-->
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-annotations</artifactId>
-            <version>${json.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-            <version>${json.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>${json.version}</version>
-        </dependency>
-
         <!--添加lombok支持-->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -229,44 +186,17 @@
             <version>1.16.10</version>
         </dependency>
 
-        <!--其中包含了StringUtils工具类-->
+        <!--其中包含了StringUtils工具类(使用commons-lang3,不再使用commons-lang)-->
         <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>2.6</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.5</version>
         </dependency>
 
     </dependencies>
 
     <build>
         <finalName>lession4</finalName>
-        <plugins>
-            <!--MyBaits逆向工程的插件-->
-            <plugin>
-                <groupId>org.mybatis.generator</groupId>
-                <artifactId>mybatis-generator-maven-plugin</artifactId>
-                <!--使用1.3.2版本（注意1.3.0版有不能取消自动生成注释的bug）-->
-                <version>1.3.2</version>
-                <configuration>
-                    <!--配置文件的位置-->
-                    <configurationFile>src/main/resources/generatorConfig.xml
-                    </configurationFile>
-                    <verbose>true</verbose>
-                    <overwrite>true</overwrite>
-                </configuration>
-                <dependencies>
-                    <!--此处添加一个mysql-connector-java依赖可以防止MyBatis逆向工程出现Exception getting JDBC Driver:
-                     com
-                    .mysql.jdbc.Driver -> [Help 1]-->
-                    <dependency>
-                        <groupId>mysql</groupId>
-                        <artifactId>mysql-connector-java</artifactId>
-                        <version>${mysql.vsersion}</version>
-                        <scope>runtime</scope>
-                    </dependency>
-                </dependencies>
-            </plugin>
-        </plugins>
         <resources>
             <resource>
                 <directory>src/main/java</directory>
